# pytorch-ner

./: .coveragerc  .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  codecov.yml  config.yaml  main.py  requirements.txt  setup.cfg  test_all.sh
.github/workflows/: ci.yml  codecov.yml  lint.yml  test.yml  tests.yml
pytorch_ner/: __init__.py  __main__.py  config.py  dataset.py  logger.py  main.py  metrics.py  model_checkpoint.py  neural_network.py  onnx.py  prepare_data.py  pytorchtools.py  save.py  train.py  utils.py
pytorch_ner/nn_modules/: architecture.py  attention.py  crf.py  dropout.py  embedding.py  linear.py  normalization.py  rnn.py
tests/: conll.txt  test_architecture.py  test_attention.py  test_dataset.py  test_dropout.py  test_embedding.py  test_linear.py  test_main.py  test_neural_network.py  test_onnx.py  test_prepare_data.py  test_rnn.py  test_save.py  test_train.py  test_utils.py
tests/config/: config.yaml  config_no_test.yaml
tests/data/: conll.txt  fasttext.model  glove.txt  word2vec.wv
tests/test_nn_modules/: test_attention.py  test_dropout.py  test_embedding.py  test_linear.py  test_normalization.py  test_rnn.py
