[metadata]
name = pytorch-ner
version = 0.1.0
author = Dani El-Ayyass
author_email = dayyass@yandex.ru
description = Pipeline for training NER models using PyTorch
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/dayyass/pytorch-ner
project_urls =
    Bug Tracker = https://github.com/dayyass/pytorch-ner/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.6
install_requires =
    gensim == 3.8.3
    numpy >= 1.19.5
    onnx >= 1.10.1
    onnxruntime >= 1.9.0
    PyYAML >= 5.4.1
    scikit-learn >= 0.24.2
    torch >= 1.9.1
    tqdm >= 4.62.3

[options.entry_points]
console_scripts =
    pytorch-ner-train = pytorch_ner.__main__:main
